name:                servant-generic-custommonad-streaming
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/servant-generic-custommonad-streaming#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable servant-generic-custommonad-streaming
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , servant
                     , servant-client
                     , servant-client-core
                     , servant-server
                     , aeson
                     , http-client
                     , http-types
                     , transformers
                     , unliftio
                     , wai
                     , warp
                     , http-media
